# BetterUP

./: .env.example  .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: input.rs  main.rs  request_inputs.rs  request_outputs.rs
api/src/routes/: user.rs  website.rs
db_processor/: Cargo.toml
notification/: Cargo.toml
notification/src/: main.rs
redis_lib/: Cargo.toml
redis_lib/src/: lib.rs
store/: Cargo.toml
store/migrations/: 20251223191821_init.sql
store/migrations/2025-12-23-135928-0000_init/: down.sql  up.sql
store/migrations/2025-12-23-140427-0000_fix_table/: down.sql  up.sql
store/src/: config.rs  lib.rs  models.rs  schema.rs  store.rs
store/src/models/: user.rs  website.rs
worker/: Cargo.toml
worker/src/: main.rs
