[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1.12"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
store = { path = "../store" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
dotenv = "0.15.0"
