[package]
name = "redis_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.25.4", features = ["tokio-comp", "aio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
