[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
